# pyCHMP

./: .gitignore  .zenodo.json  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_eovsa_map_noise.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
development-notes/: 2026-03-27-eovsa-synoptic-download-fix.md  2026-03-27-soft-q0-and-sparse-grid-cli.md  2026-04-13-point-centric-artifact-migration.md
docs/: artifact_data_contract.rst  conf.py  index.rst  provenance.rst
examples/: README.md  __init__.py  benchmark_multi_scan_ab.py  benchmark_scan_ab_obs_map.py  convert_ab_scan_artifact_to_sparse.py  demo_gxrender_mw_adapter.py  download_fix_eovsa_synoptic.py  estimate_map_noise_cli.py  fit_q0_obs_map.py  plot_ab_scan_artifacts.py  pychmp_view.py  q0_artifact_plot.py  replot_q0_artifacts.py  scan_ab_obs_map.py  scan_synthetic_ab_grid.py  test_map_noise_manual.py  validate_q0_recovery.py
examples/notebooks/: README.md
examples/python/: adaptive_ab_search_single_frequency.py  adaptive_ab_search_single_observation.py  validate_q0_recovery_earth_eovsa_psf.py
reports/parallel benchmark test/: generate_scan_ab_obs_map_benchmark_report.py  scan_ab_obs_map_benchmark_2026-04-09.csv  scan_ab_obs_map_benchmark_2026-04-09.md  scan_ab_obs_map_benchmark_2026-04-13.csv  scan_ab_obs_map_benchmark_2026-04-13.md
reports/parallel benchmark test/artifacts/: scan_ab_obs_map_process-pool_01_r01.h5  scan_ab_obs_map_process-pool_01_r01.h5.refresh  scan_ab_obs_map_process-pool_02_r01.h5  scan_ab_obs_map_process-pool_02_r01.h5.refresh  scan_ab_obs_map_process-pool_03_r01.h5  scan_ab_obs_map_process-pool_03_r01.h5.refresh  scan_ab_obs_map_process-pool_04_r01.h5  scan_ab_obs_map_process-pool_04_r01.h5.refresh  scan_ab_obs_map_process-pool_05_r01.h5  scan_ab_obs_map_process-pool_05_r01.h5.refresh  scan_ab_obs_map_process-pool_06_r01.h5  scan_ab_obs_map_process-pool_06_r01.h5.refresh  scan_ab_obs_map_process-pool_07_r01.h5  scan_ab_obs_map_process-pool_07_r01.h5.refresh  scan_ab_obs_map_process-pool_08_r01.h5  scan_ab_obs_map_process-pool_08_r01.h5.refresh  scan_ab_obs_map_process-pool_09_r01.h5  scan_ab_obs_map_process-pool_09_r01.h5.refresh  scan_ab_obs_map_serial_01_r01.h5  scan_ab_obs_map_serial_01_r01.h5.refresh
scripts/: README.md  fit_q0_obs_map_options_test.sh  scan_ab_obs_map_options_test.sh  validate_q0_recovery_options_test.sh
scripts/unix/: adaptive_ab_search_single_frequency_options_test.sh  benchmark_scan_ab_obs_map.sh  fit_q0_obs_map_options_test.sh  scan_ab_obs_map_options_test.sh  validate_q0_recovery_options_test.sh
scripts/windows/: adaptive_ab_search_single_frequency_options_test.cmd  benchmark_scan_ab_obs_map.cmd  fit_q0_obs_map_options_test.cmd  scan_ab_obs_map_options_test.cmd  validate_q0_recovery_options_test.cmd
src/pychmp/: __init__.py  ab_scan_artifacts.py  ab_scan_execution.py  ab_scan_tasks.py  ab_search.py  cli.py  fits_utils.py  fitting.py  gxrender_adapter.py  map_noise.py  metrics.py  obs_maps.py  optimize.py  q0_artifact_panel.py  viewer.py
tests/: test_ab_scan_artifacts.py  test_ab_scan_execution.py  test_ab_scan_tasks.py  test_ab_search.py  test_adaptive_single_frequency_cli.py  test_cli.py  test_fitting.py  test_gxrender_adapter.py  test_import.py  test_integration_earth_eovsa_q0.py  test_map_noise.py  test_metrics.py  test_obs_maps.py  test_observation_cli_shared.py  test_optimize.py  test_q0_artifact_contract.py  test_q0_artifact_panel.py  test_scan_ab_obs_map_resume.py  test_viewer_scan_state.py
tests/scripts/: README.md  demo_earth_eovsa_q0_recovery.py  demo_gxrender_mw_adapter.py  demo_synthetic_q0_recovery.py
