[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pychmp"
version = "0.1.0a2"
description = "Python Coronal Heating Modeling Pipeline for data-constrained fitting of GX models"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
  { name = "Gelu Nita" },
  { name = "Alexey Kuznetsov" },
]
keywords = ["solar-physics", "gx-simulator", "ebtel", "model-fitting", "radio", "euv"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "astropy>=5",
  "h5py>=3.8",
  "matplotlib>=3.8",
  "numpy>=1.25",
  "scipy>=1.11",
]


[project.optional-dependencies]
dev = [
  "bumpver>=2024.1130",
  "pytest>=8.0",
]

[project.scripts]
pychmp = "pychmp.cli:main"
pychmp-view = "pychmp.viewer:main"

[project.urls]
Homepage = "https://github.com/suncast-org/pyCHMP"
Repository = "https://github.com/suncast-org/pyCHMP"
"Algorithmic Provenance" = "https://github.com/kuznetsov-radio/gxmodelfitting"

[tool.hatch.build.targets.wheel]
packages = ["src/pychmp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = [".", "src"]
cache_dir = "/tmp/pychmp_pytest_cache"

[tool.bumpver]
current_version = "0.1.0a2"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "chore: bump version {old_version} -> {new_version}"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  "version = \"{version}\"",
]
"src/pychmp/__init__.py" = [
  "__version__ = \"{version}\"",
]
